@@ -25,6 +25,8 @@ COM_WEBLINKS_LINK="Web Link"
 COM_WEBLINKS_NAME="Name"
 COM_WEBLINKS_NO_WEBLINKS="There are no Web links in this category"
 COM_WEBLINKS_NUM="# of links:"
+COM_WEBLINKS_FORM_EDIT_WEBLINK="Edit a Web link"
+COM_WEBLINKS_FORM_SUBMIT_WEBLINK="Submit a Web link"
 COM_WEBLINKS_SAVE_SUCCESS="Web link successfully saved"
 COM_WEBLINKS_SUBMIT_SAVE_SUCCESS="Web link successfully submitted"
 COM_WEBLINKS_WEB_LINKS="Web links"
