@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+10-Mar-2011 Jean-Marie Simonet
+ $# [#25252] *Missing weblink ini strings when submit/edit weblink from a content.
+
 09-Mar-2011 Jean-Marie Simonet
  $ [#25231] Typo in en-GB.lib_joomla.ini. Thanks Serge.
  # [#25213] Several places calling getXMLparser instead of getXMLParser. Thanks Bill and Anon 
